# deployment-example

./: Makefile  README.md  app.py  pyproject.toml
docker/: Dockerfile.dev  Dockerfile.prod
kubernetes/: deployment.yml  service.yml
